--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
       <ul>
         <li><a href="#">Inicio</a></li>
         <li class="dropdown"><a href="#buscar-escola">Escolas</a></li>
-        <li class="dropdown1"><a href="Livros.html">Livros</a></li>
+       
         <li class="faleconosco"><a href="#">Fale Conosco</a></li>
+        <li class="dropdown1"><a href="portalescolalogin.html">Portal da Escola</a></li>
       </ul>
     </nav>
     <div class="carousel">
