--- a/loja-junior.html
+++ b/loja-junior.html
@@ -178,6 +178,7 @@
     Item adicionado ao carrinho!
   </div>
 
+  
   <script>
     document.addEventListener('DOMContentLoaded', function() {
         const schoolNameElement = document.getElementById('currentSchoolName');
@@ -197,6 +198,22 @@
             profileSchoolParagraph.innerHTML = `<strong>Escola:</strong> ${schoolName}`;
         }
     });
+
+    // --- SALVAR NOME COMPLETO DA CRIANÇA ---
+document.addEventListener("DOMContentLoaded", function () {
+    const userParagraph = document.querySelector("#profileInfo p:first-child");
+
+    if (userParagraph) {
+        // Remove "Usuário:" e pega só o nome
+        const rawText = userParagraph.textContent.replace("Usuário:", "").trim();
+
+        // Salva no localStorage
+        localStorage.setItem("nomeDaCrianca", rawText);
+
+        console.log("[loja.html] Nome da criança salvo:", rawText);
+    }
+});
+
   </script>
 
   <script>
